<resources>
    <string name="app_name">Home Security</string>
    <string name="image_splash_logo">Splash logo</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_debug">Debug</string>
    <string name="action_sync">Sync RGW</string>
    <string name="action_gcsync">Sync GC HUB</string>
    <string name="action_logout">Logout</string>
    <string name="start_scan">Start scan</string>
    <string name="stop_scan">Stop scan</string>
    <string name="mac_address">MAC: %s</string>
    <string name="connection_state">State: %s</string>
    <string name="read_rssi">RSSI: %d</string>
    <string name="prefix_hex">0x</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="setup_notification">Register notifications</string>
    <string name="setting_notification">Setting up notifications…</string>
    <string name="teardown_notification">Disable notifications</string>
    <string name="setup_indication">Register indications</string>
    <string name="setting_indication">Setting up indications…</string>
    <string name="teardown_indication">Disable indications</string>
    <string name="notify_indicate_compat_warning">NOTIFY &amp; INDICATE COMPATIBILITY MODE ONLY</string>
    <string name="title_example1">Home Security</string>
    <string name="title_example2">Connection &amp; connection state</string>
    <string name="title_example3">Service discovery</string>
    <string name="title_example4">Characteristic operations</string>
    <string name="not_clickable">No action</string>
    <string name="write_input">Write input</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinner_title">Sensor List</string>


    <!--checkbox zone -->

    <string name="zone0">Zone 0</string>
    <string name="zone1">Zone 1</string>
    <string name="zone2">Zone 2</string>
    <string name="zone3">Zone 3</string>
    <string name="zone4">Zone 4</string>

</resources>
