<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/freset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Factory Reset" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prefix_hex"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/read_hex_output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/read"
                android:visibility="visible" />

            <TextView
                android:id="@+id/read_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:weightSum="10">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/textViewlen"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="0) Lenght"
                                android:textSize="14sp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="0) AD type"
                                android:textSize="14sp" />

                            <EditText
                                android:id="@+id/write_input1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/write_input"
                                android:inputType="text"
                                android:text="FF" />
                        </LinearLayout>


                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

            <Button
                android:id="@+id/write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="START" />

            <Button
                android:id="@+id/stopbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="STOP" />

            <Button
                android:id="@+id/notify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/setup_notification" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
